all work done for blog

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -8,7 +8,7 @@
 
 
 <th:block th:fragment="footer">
-    <footer class="page-footer font-small bg-light fixed-bottom">
+    <footer class="page-footer font-small bg-light fixed-bottom mt-4">
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2019 Copyright:
             <span th:text="Blogger" />
