--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -14,6 +14,8 @@
             <li class="nav-item d-inline"><a href="/posts">Posts</a></li>
             <li class="nav-item d-inline"><a href="/roll">Dice Roll</a></li>
             <li class="nav-item d-inline"><a href="/posts/create">Create new post</a></li>
+            <li class="nav-item d-inline"><a href="/fileupload">Upload a file</a></li>
+
 
         </ul>
     </nav>
