--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -9,14 +9,12 @@
 
 <th:block th:fragment="navbar">
     <nav class="navbar navbar-light bg-light">
-        <ul>
-            <li class="nav-item d-inline"><a href="/">Home</a></li>
-            <li class="nav-item d-inline"><a href="/posts">Posts</a></li>
-            <li class="nav-item d-inline"><a href="/roll">Dice Roll</a></li>
-            <li class="nav-item d-inline"><a href="/posts/create">Create new post</a></li>
-            <li class="nav-item d-inline"><a href="/fileupload">Upload a file</a></li>
-
-
+        <ul class="flexThis">
+            <li class="nav-item d-inline mx-2"><a href="/">Home</a></li>
+            <li class="nav-item d-inline mx-2"><a href="/posts">Posts</a></li>
+            <li class="nav-item d-inline mx-2"><a href="/roll">Dice Roll</a></li>
+            <li class="nav-item d-inline mx-2"><a href="/posts/create">Create new post</a></li>
+            <li class="nav-item d-inline mx-2"><a href="/fileupload">Upload a file</a></li>
         </ul>
     </nav>
 </th:block>
