--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -6,11 +6,11 @@
 <div th:replace="fragments/navbar :: navbar"></div>
 
 
-<div th:each="post : ${posts}">
-<div class="card">
-    <h5 class="card-header">Featured</h5>
+<div th:each="post : ${posts}" class="displayInFlex mx-a">
+<div class="card cardWidth cardHeight">
+    <h5 class="card-header" th:text="'Title: ' + ${post.title}"></h5>
     <div class="card-body">
-        <h5  class="card-title" th:text="'Title: ' + ${post.title}"></h5>
+        <h5  class="card-title"></h5>
         <p class="card-text" th:text="'Description: ' + ${post.body}"></p>
         <a th:href="'/posts/' + ${post.id}" class="btn btn-primary">View Post</a>
     </div>
