--- a/src/main/resources/templates/rollMade.html
+++ b/src/main/resources/templates/rollMade.html
@@ -15,6 +15,8 @@
     Your number is not correct
 </div>
 
+<a th:href="${'/roll'}"><button type="button">Retry</button></a>
+
 <footer th:replace="fragments/footer :: footer"></footer>
 </body>
 </html>
